<resources>
    <string name="app_name">GunRecoilFormulae</string>
    <string name="firearmWeight">Firearm Weight (lb)</string>
    <string name="bulletWeight">Bullet Weight (gr)</string>
    <string name="bulletVelocity">Bullet Velocity (fps)</string>
    <string name="powderWeight">Powder Weight (gr)</string>
    <string name="powderVelocity">Powder Velocity (fps)</string>
    <string name="firearmVelocity">Firearm Velocity (fps)</string>
    <string name="recoil">Recoil (ft lb)</string>
    <string name="btnEnergyCalculate">Calcular</string>
    <string name="lbl_FirearmVelocity">Firearm Velocity (fps)</string>
    <string name="lbl_FreeRecoilEnergy">Free Recoil Energy (ft lb)</string>
</resources>
